--- a/templates/home.html
+++ b/templates/home.html
@@ -4,52 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RBS Website</title>
-  <style>
-    h1 {
-      font-size: 40px;
-      font-family: Roboto;
-      font-weight: bold;
-      color: rgb(50, 50, 50);
-      text-align: center;
-    }
-    #banner {
-      width: 100%;
-      height: 360px;
-    }
-    h2 {
-      font-family: Roboto;
-      font-size: 32px;
-      color: rgb(100, 100, 100);
-      text-align: center;
-      font-weight: normal;
-    }
-    p {
-      font-family: Roboto;
-      color: rgb(80, 80, 80);
-    }
-    .bodytext {
-      font-family: Roboto;
-      color: rgb(80, 80, 80);
-    }
-    #container {
-      max-width: 720px;
-      margin: 0 auto;
-    }
-  </style>
+    <title>RBS Website</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<style>
+  #banner {
+    height: 360px;
+    width: 100%;
+  }
+</style>
+  
 </head>
 <body>
-  <div id="container">
-    <h1>RBS Homepage.</h1>
-    <img id="banner" src="https://rbs-website-1.yong-woo-kim.repl.co/static/RBS-title.jpg">
-    <h2>About RBS</h2>
-    <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <p class="bodytext">TPDO - show Teacher</p>
+  <div class="container">
+    <h1 class="text-center mt-4 mb-4">{{school}} Homepage.</h1>
+    <img class="img-fluid" id="banner" src="https://rbs-website-1.yong-woo-kim.repl.co/static/RBS-title.jpg">
+    <h2 class="text-center mt-4 mb-2">About {{school}}</h2>
+    <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>
+      {% for content in contents %}
+        {% include 'display.html'%}
+      {% endfor %}
+    </p>
     <div style="text-align:center;">
-      <button>Contact Us</button>
-      <p>Copyright 2023, zon.co.kr</p>
+      <button class="btn btn-primary btn-lg">Contact Us</button>
+      <p class="mt-4">Copyright 2023, zon.co.kr</p>
     </div>
   </div>
+
 </body>
   
 </html>
