--- a/templates/home.html
+++ b/templates/home.html
@@ -10,27 +10,40 @@
   #banner {
     height: 360px;
     width: 100%;
+    margin-bottom: 16px;
   }
 </style>
-  
 </head>
 <body>
+  {% include 'nav.html' %}
+  
   <div class="container">
     <h1 class="text-center mt-4 mb-4">{{school}} Homepage.</h1>
     <img class="img-fluid" id="banner" src="https://rbs-website-1.yong-woo-kim.repl.co/static/RBS-title.jpg">
     <h2 class="text-center mt-4 mb-2">About {{school}}</h2>
+    <div class="row" style="margin-bottom:16px">
+      <div class="col-md-6">
+    
     <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     <p>
-      {% for content in contents %}
+      </div>
+      <div class="d-none d-md-block col-md-6">
+      <img src="/static/RBS-left.jpg" style="height:320px; border-radius:4px;" >
+      </div>
+    </div>
+      <h2 class="text-center mt-4 mb-4">INDEX</h2>
+      <div>
+        {% for content in contents %}
         {% include 'display.html'%}
       {% endfor %}
+      </div>
     </p>
     <div style="text-align:center;">
-      <button class="btn btn-primary btn-lg">Contact Us</button>
-      <p class="mt-4">Copyright 2023, zon.co.kr</p>
+      <a class="btn btn-primary btn-lg" href="mailto:sskyw32@gmail.com">Contact Us</a>
+      <p class="mt-4">Copyright 2023, ZonSystem.co.kr</p>
     </div>
   </div>
-
+  {% include 'footer.html' %}
 </body>
   
 </html>
