--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
       </div>
     </p>
     <div style="text-align:center;">
-      <a class="btn btn-primary btn-lg" href="mailto:sskyw32@gmail.com">Contact Us</a>
+      <a class="btn btn-primary btn-lg" href="mailto:sskyw32@gmail.com?subject=RBS%EC%97%90%20%EB%8C%80%ED%95%9C%20%EC%A7%88%EB%AC%B8&body=My%20Name%20%3A%20%3Chear%20my%20name%3E%0D%0A%0D%0AMy%20Mail%20%3A%20%3Cmail%20ID%3E%0D%0A%0D%0AMy%20H.p%20%3A%20%3CPhone%20Number%3E%0D%0AMy%20Question%20%3A%20%3CQuestion%3E">Contact Us</a>
       <p class="mt-4">Copyright 2023, ZonSystem.co.kr</p>
     </div>
   </div>
