--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,12 @@
 <div class="container">
-  <footer class="py-3 my-4">
+  <h4 class="text-center mt-4">ONENESS CHYRCH</h4>
+  <footer class="py-2 my-2">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a target="_blank" href="https://www.ioneness.org" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a target="_blank" href="https://www.ioneness.org/29" class="nav-link px-2 text-muted">Introduction</a></li>
+      <li class="nav-item"><a target="_blank" href="https://www.ioneness.org/31" class="nav-link px-2 text-muted">News</a></li>
+      <li class="nav-item"><a target="_blank" href="https://www.ioneness.org/35" class="nav-link px-2 text-muted">Message</a></li>
+      <li class="nav-item"><a target="_blank" href="https://www.ioneness.org/35" class="nav-link px-2 text-muted">Gallery</a></li>
     </ul>
     <p class="text-center text-muted">&copy; 2023 ZonSystem, Inc</p>
   </footer>
