--- a/templates/home.html
+++ b/templates/home.html
@@ -33,9 +33,9 @@
     </div>
       <h2 class="text-center mt-4 mb-4">INDEX</h2>
       <div>
-        {% for content in contents %}
-        {% include 'display.html'%}
-      {% endfor %}
+<!--         {% for content in contents %} -->
+          {% include 'display.html'%}
+<!--         {% endfor %} -->
       </div>
     </p>
     <div style="text-align:center;">
