--- a/templates/display.html
+++ b/templates/display.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="col-2">
-    <a href="/" type="button" class="btn btn-outline-primary" style="margin-top:20px;">Apply</a>
+    <a href="/{{content['title']}}" type="button" class="btn btn-outline-primary" style="margin-top:20px;">Apply</a>
   </div>
 
 </div>
