--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RBS Website</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<style>
-  #banner {
-    height: 360px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-</style>
+  {% include 'bootstrap.html' %}
 </head>
 <body>
   {% include 'nav.html' %}
+  {% include 'banner.html' %}
   
   <div class="container">
     <h1 class="text-center mt-4 mb-4">{{school}} Homepage.</h1>
-    <img class="img-fluid" id="banner" src="https://rbs-website-1.yong-woo-kim.repl.co/static/RBS-title.jpg">
+    
     <h2 class="text-center mt-4 mb-2">About {{school}}</h2>
     <div class="row" style="margin-bottom:16px">
       <div class="col-md-6">
