--- a/templates/detail-info.html
+++ b/templates/detail-info.html
@@ -8,12 +8,12 @@
   {% include 'nav.html' %}
   {% include 'banner.html' %}
   <div class="container">
-    <h1 class="text-center mt-4 mb-4">{{contents}} Information.</h1>
+    <h1 class="text-center mt-4 mb-4">{{title}} Information.</h1>
     
-    <h2 class="text-center mt-4 mb-2">About {{school}}</h2>
+    <h2 class="text-center mt-4 mb-2">About {{title}}</h2>
     <div class="row" style="margin-bottom:16px">
       <div class="col-md-6">
-
+  {% include 'application_form.html' %}
   {% include 'footer.html' %}
 </body>
 </html>
