--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,9 @@
   {% include 'banner.html' %}
   
   <div class="container">
-    <h1 class="text-center mt-4 mb-4">{{school}} Homepage.</h1>
+    <h1 class="text-center mt-4 mb-4">{{title}} Homepage.</h1>
     
-    <h2 class="text-center mt-4 mb-2">About {{school}}</h2>
+    <h2 class="text-center mt-4 mb-2">About {{title}}</h2>
     <div class="row" style="margin-bottom:16px">
       <div class="col-md-6">
     
