change insert query

--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -22,7 +22,7 @@
 
   <div class="mb-2">
     <label for="">Address</label><br>
-    <textarea name="" id="" cols="30" rows="3" name="address"></textarea>
+    <textarea cols="30" rows="3" name="address"></textarea>
   </div>
   
   <div>
