--- a/templates/detail-info.html
+++ b/templates/detail-info.html
@@ -3,6 +3,7 @@
 <head>
   {% include 'bootstrap.html' %}
   <title>Teacher</title>
+  <link rel="stylesheet" href="/static/table.css" />
 </head>
 <body>
   {% include 'nav.html' %}
@@ -11,8 +12,31 @@
     <h1 class="text-center mt-4 mb-4">{{title}} Information.</h1>
     
     <h2 class="text-center mt-4 mb-2">About {{title}}</h2>
+    <div class="tbl-header">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+          {% for column_name in tbl_head %}
+            <th>{{column_name}}</th>
+          {% endfor %}
+        </thead>
+      </table>
+    </div>
+    <div class="tbl-content">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+          {% for teacher in contents %}
+          <tr>
+            {% for info in teacher %}
+              <td>{{info}}</td>
+            {% endfor %}
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    
     <div class="row" style="margin-bottom:16px">
-      <div class="col-md-6">
+    <div class="col-md-6">
   {% include 'application_form.html' %}
   {% include 'footer.html' %}
 </body>
